fix: modal z-index

--- a/app/(dashboard)/project/[id]/page.module.scss
+++ b/app/(dashboard)/project/[id]/page.module.scss
@@ -67,6 +67,5 @@
 .taskList {
   height: 80%;
   overflow: scroll;
-  // position: relative;
-  // z-index: 4;
+  position: relative;
 }
